--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 /* Estrutura 
 ---------------------------------- */
 
-/* Cabeçalhos
+/* Cabe√ßalhos
 ---------------------------------- */
 
 /* Imagens
@@ -14,10 +14,10 @@
 /* Listas
 ---------------------------------- */
 
-/* Elementos de formulários
+/* Elementos de formul√°rios
 ---------------------------------- */
 
-/* Comentários geral
+/* Coment√°rios geral
 ---------------------------------- */
 
 /* Barra lateral
